[package]
name = "evetrade"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10.2"
chrono = "0.4.39"
tqdm = "0.7.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
tar = "0.4.43"
bincode = "1.3.3"
serde = { version = "1.0.216", features = ["derive"] }
csv = "1.3.1"
serde_yaml = "0.9.34"
xz2 = "0.1.7"
bzip2 = "0.5.0"
